ajout de l'attribut title sur les liens des réseaux sociaux

--- a/style.css
+++ b/style.css
@@ -444,6 +444,9 @@ body {
     font-weight : 400;
     color : #FFF;
     }
+    h2.realisations, h2.services {
+        color: #000000;
+    }
     p.text-center {
         color: #000000;
     }
