--- a/style.css
+++ b/style.css
@@ -439,16 +439,22 @@ body {
     color : rgb(0, 0, 0, 0.5);
     background : none;
     }
-    h1, h2, h3, h4, h5, h6, p, label, .btn, a {
+    h1, h2, h3, h4, h5, h6, p, .btn, a {
     font-family : "helvetica";
     font-weight : 400;
     color : #FFF;
+    }
+    label, p.contact-paragraph {
+        color: #292929;
+        font-weight: 600;
+        font-size: 15px;
     }
     h2.realisations, h2.services {
         color: #000000;
     }
     p.text-center {
         color: #000000;
+        font-size: 16px;
     }
     .container {
     max-width : 1000px;
