--- a/style.css
+++ b/style.css
@@ -521,7 +521,7 @@ body {
     font-size : 15px;
     text-transform : uppercase;
     font-weight : 700;
-    color : #333333 !important ;
+    color : #FFF !important ;
     }
     .med-width-whitespace {
     max-width : 800px;
