--- a/style.css
+++ b/style.css
@@ -521,7 +521,7 @@ body {
     font-size : 15px;
     text-transform : uppercase;
     font-weight : 700;
-    color : #FFF !important ;
+    color : #292929 !important ;
     }
     .med-width-whitespace {
     max-width : 800px;
@@ -538,10 +538,14 @@ body {
     }
     .portfolio-thumb {
     margin-bottom : 24px;
+    margin-left: auto;
+    margin-right: auto;
     }
     .portfolio-row {
     margin-bottom : 44px;
-    margin-top : 50px;
+    margin-top : 25px;
+    margin-left: auto;
+    margin-right: auto;
     }
     .avatar {
     box-shadow : 0 4px 9px rgb(0, 0, 0, 0.3);
